--- a/app.yaml
+++ b/app.yaml
@@ -31,7 +31,7 @@ spec:
  initContainers:
  - name: init-html
  image: curlimages/curl
- command: ["sh", "-c", "curl -o /usr/share/nginx/html/index.html https://raw.githubusercontent.com/<QuinioMaryMae29>/<kubernetesWebApp>/<main>/index.html"]
+ command: ["sh", "-c", "curl -o /usr/share/nginx/html/index.html https://raw.githubusercontent.com/<marymaeeeeeeq>/<kubernetesWebApp>/<main>/index.html"]
  volumeMounts:
  - name: html-volume
  mountPath: /usr/share/nginx/html
